--- a/panel.html
+++ b/panel.html
@@ -7,18 +7,35 @@
         <title>Afet Sonrası Akıllı Lojistik Yönetimi | Panel</title>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+        <style>
+            .inner-body {
+                position: relative;
+            }
+        </style>
     </head>
     <body>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">ASALY</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarColor01">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Simülasyon</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="#">Kontrol Paneli</a></li>
-                    </ul>
+            <a class="navbar-brand" href="#">ASALY</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Simülasyon</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#">Kontrol Paneli</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="inner-body" data-spy="scroll" data-target="#list">
+                    <div id="list" class="list-group">
+                        <a class="list-group-item list-group-item-action" href="#list-item-1">Ayar 1</a>
+                        <a class="list-group-item list-group-item-action" href="#list-item-2">Ayar 2</a>
+                        <a class="list-group-item list-group-item-action" href="#list-item-3">Ayar 3</a>
+                    </div>
                 </div>
-            </nav>
+            </div>
+        </div>
     </body>
 </html>
