--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
             </div>
         </nav>
         <br>
+        <!-- Main Body -->
         <div class="container-fluid">
             <div class="row">
+
+                <!-- Map Section-->
                 <div class="col-8" style="background-color:transparent; height: 500px; border-radius: 2%">
                     <div id="map">
                         <script>
@@ -51,6 +54,8 @@
                     </div>
                     
                 </div>
+
+                <!-- Map Controls -->
                 <div class="col" style="background-color:slategrey; margin-right: 10px; border-radius: 2%; padding: 15px">
                     <h4>Manuel Doğal Afet Simülasyonu</h4>
                     <form>
